fix(keyboard): Updated spacing and font for buttons

--- a/src/components/keyboard/index.module.scss
+++ b/src/components/keyboard/index.module.scss
@@ -1,33 +1,14 @@
-.backspace {
-  padding-top: 5px;
-
-  & > svg {
-    height: 20px;
-    width: 20px;
-  }
-}
-
 .container {
   margin: 0 auto;
-  max-width: 375px;
   padding: 0 5px;
-
-  @media screen and (min-width: 375px) {
-    padding: 0 15px;
-  }
-
-  @media screen and (min-width: 768px) {
-    max-width: 500px;
-  }
 }
 
 .row {
   display: flex;
-  height: 38px;
+  justify-content: center;
   padding: 0 0 5px;
 
   @media screen and (min-width: 768px) {
-    height: 46px;
     padding: 2px 0;
   }
 
@@ -35,22 +16,46 @@
     border: 1px solid #cccccc;
     color: #353839;
     cursor: pointer;
-    flex-grow: 1;
     font-family: 'Poppins', sans-serif;
+    font-size: 16px;
     font-weight: 500;
-    margin-right: 5px;
-    min-width: 30px;
+    height: 38px;
+    margin-right: 2px;
     text-transform: capitalize;
+    width: 34.5px;
 
     @media screen and (min-width: 768px) {
-      font-size: 16px;
+      font-size: 18px;
+      height: 46px;
       margin-right: 4px;
-      min-width: 46px;
+      width: 46px;
     }
   }
 
   & > button:last-child {
     margin-right: 0;
+  }
+}
+
+button.backspace {
+  padding-top: 8px;
+  width: 42px;
+
+  @media screen and (min-width: 768px) {
+    width: 62px;
+  }
+
+  & > svg {
+    height: 20px;
+    width: 20px;
+  }
+}
+
+button.enter {
+  width: 62px;
+
+  @media screen and (min-width: 768px) {
+    width: 82px;
   }
 }
 
